Partial commit